# QuantumHaskell

./: .travis.yml  AtomicOrbitals.hs  AutomaticDifferentiation.hs  DiracNot.hs  DiracNot_Bra-basic.hs  DiracNotation.hs  FockState.hs  Harmonic_Oscillator.hs  QuantumVector.lhs  README.md
AutomaticDifferentiation/: AutomaticDifferentiation.hs
DiracNotation/: DiracNotation.hs
MathLib/: AutomaticDifferentiation.hi  MathFun.hi  MathFun.hs
Notation/: DiracNotation.hi  DiracNotation.hs  QuantumState.hi  QuantumState.hs
QuantumHaskell-mathlib/: QuantumHaskell-mathlib.cabal  README.md
QuantumHaskell-mathlib/src/MathLib/: AutomaticDifferentiation.hs
QuantumHaskell-notation/: QuantumHaskell-notation.cabal  README.md
QuantumHaskell-notation/test/: notation-test.hs
QuantumState/: QuantumState.hs
