name:                QuantumHaskell-mathlib
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/QuantumHaskell-mathlib#readme
license:             AGPL
license-file:        LICENSE
author:              Johan Jönsson
maintainer:          johanjoensson@gmail.com
copyright:           2017 Johan Jönsson
category:            Physics
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     MathLib.MathFun, MathLib.AutomaticDifferentiation
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

test-suite QuantumHaskell-mathlib-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , QuantumHaskell-mathlib
                     , QuickCheck >= 2.9
                     , hspec >= 2.0
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/QuantumHaskell-mathlib
