name:                QuantumHaskell-notation
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/QuantumHaskell-notation#readme
license:             AGPL
license-file:        LICENSE
author:              Johan Jönsson
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Physics
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Notation.DiracNotation, Notation.QuantumState
  build-depends:       base >= 4.7 && < 5
                     , QuickCheck >= 2.9
                     , hspec >= 2.0
  default-language:    Haskell2010

test-suite QuantumHaskell-notation-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             notation-test.hs
  build-depends:       base
                     , QuantumHaskell-notation
                     , QuickCheck >= 2.9
                     , hspec >= 2.0
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/QuantumHaskell-notation
